default/unifi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-service
  labels:
    app.kubernetes.io/part-of: unifi
spec:
  type: NodePort
  ports:
    - name: comms
      targetPort: comms
      port: 31501
      nodePort: 31501
    - name: web
      targetPort: web
      port: 31502
      nodePort: 31502
    - name: stun
      targetPort: stun
      port: 31503
      nodePort: 31503
  selector:
    app: unifi-controller
